<resources>
    <string name="app_name">TestBmob</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码</string>
    <string name="news">帖子</string>
    <string name="add">添加</string>
    <string name="submit">提交</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="refresh">刷新</string>
</resources>
